# csv-to-flatbuffer

./: .gitignore  Cargo.toml  README.md  build.rs  ohlcv.fbs  ohlcv_soa.fbs
src/: cli.rs  csv_processor.rs  file_processing.rs  index.rs  main.rs  ohlcv_generated.rs  ohlcv_soa_generated.rs  progress.rs  read_flatbuffers.rs  resample.rs  utils.rs
