[package]
name = "csv-to-flatbuffer"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.1"
rayon = "1.5"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
num_cpus = "1.17.0"
chrono = "0.4"
flatbuffers = "25.2.10"
memmap2 = "0.9.5"
bincode = "1.3.3"

[build-dependencies]
flatc-rust = "0.2.0"

